@startuml TechStoreStrategyPattern

skinparam class {
    BackgroundColor<<Interface>> LightBlue
    BackgroundColor<<Strategy>> LightGreen
    BackgroundColor<<Adapter>> LightYellow
}

interface PaymentStrategy <<Interface>> {
    + pay(double)
}

class CreditCardPaymentStrategy <<Strategy>> {
    - cardNumber: String
    - cvv: String
    - expiryDate: String
    - paymentGateway: ExternalPaymentGateway
    + pay(double)
}

class PayPalPaymentStrategy <<Strategy>> {
    - email: String
    - password: String
    - paymentGateway: ExternalPaymentGateway
    + pay(double)
}

interface ExternalPaymentGateway <<Adapter>> {
    + processPayment(double)
}

class CreditCardAdapter <<Adapter>> {
    + processPayment(double)
}

class PayPalAdapter <<Adapter>> {
    + processPayment(double)
}

PaymentStrategy <|.. CreditCardPaymentStrategy
PaymentStrategy <|.. PayPalPaymentStrategy

CreditCardPaymentStrategy --> ExternalPaymentGateway : uses
PayPalPaymentStrategy --> ExternalPaymentGateway : uses

ExternalPaymentGateway <|.. CreditCardAdapter
ExternalPaymentGateway <|.. PayPalAdapter

note top of PaymentStrategy
  <<interface>>
  Defines the common contract for all payment strategies
end note

note right of CreditCardPaymentStrategy
  <<Concrete Strategy>>
  • Handles credit card payments
  • Uses adapter to interface with  external payment API
  • Encapsulates card details
end note

note left of PayPalPaymentStrategy
  <<Concrete Strategy>>
  • Handles PayPal payments
  • Uses adapter to interface with  external payment API
  • Encapsulates PayPal credentials
end note

note bottom of ExternalPaymentGateway
  <<Adapter Interface>>
  • Common interface for all payment adapters
  • Bridges strategy and external APIs
end note

@enduml